--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ MetaTrader5>=5.0.5430
 # Configuration & Environment
 python-dotenv>=1.0.0
 pyyaml>=6.0.1
+pydantic>=2.0.0             # Configuration validation (Phase 0)
 
 # CLI Framework
 click>=8.1.0               # Command-line interface
