--- a/requirements.txt
+++ b/requirements.txt
@@ -100,7 +100,8 @@ mypy>=1.5.1
 # uvicorn>=0.24.0
 # websockets>=12.0
 
-# Database (Phase 5)
-# redis>=5.0.1
-# psycopg2-binary>=2.9.9
-# sqlalchemy>=2.0.23
+# Database (Phase 5.1)
+sqlalchemy>=2.0.23         # ORM for database operations
+alembic>=1.13.0            # Database migrations
+psycopg2-binary>=2.9.9     # PostgreSQL adapter (production)
+# redis>=5.0.1             # Phase 5.3 - Caching
