fix: Remove .vite cache files and update .gitignore
- Added .vite to .gitignore (build cache should not be committed)
- Added test-results, playwright-report to .gitignore
- Removed .vite directory from git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,12 @@ node_modules
 dist
 dist-ssr
 *.local
+.vite
+
+# Test results
+test-results
+playwright-report
+playwright/.cache
 
 # Editor directories and files
 .vscode/*
